SQLX integration, but not using the DB yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 log = "*"
 actix-web = "*"
 serde = { version = "*", features = ["derive"] }
+sqlx = { version = "*", features = ["postgres", "runtime-actix-rustls"] }
