--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 log = "*"
 actix-web = "*"
 serde = { version = "*", features = ["derive"] }
-sqlx = { version = "*", features = ["postgres", "runtime-actix-rustls"] }
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
+tokio = "*"
+dotenvy = "*"
